syntax = "proto3";
package nl.svsticky.chroma;

message CreatePhotoRequest {
  string albumId = 1;
  bytes photoData = 2;
}

message CreatePhotoResponse {
  string photoId = 1;
}